--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,4 +8,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Deploy
-        run: echo "Deploying project..."
+        run: echo "Deploying to ${{ github.event.client_payload.environment }}"
